test_regress/t/t_interface_modport_export.out
%Error-UNSUPPORTED: t/t_interface_modport_export.v:12:3: Unsupported: extern function
   12 |   extern function myfunc (input logic val);
      |   ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
